--- a/coding_challenge_newspaper.ipynb
+++ b/coding_challenge_newspaper.ipynb
@@ -2136,6 +2136,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Datei als CSV speichern, um die Daten weiter mit Locker Sudio oder Tableau bearbeiten zu können\n",
     "haupt_df.to_csv('haupt_data.csv', index=False)\n"
    ]
   }
