Update and rename coding_challenge_newspaper.ipynb to data_challenge_newspaper.ipynb

--- a/data_challenge_newspaper.ipynb
+++ b/data_challenge_newspaper.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tagesspiegel Data Challenge"
+    "# Data Analyst Challenge"
    ]
   },
   {
